# trajecturtle

./: .gitignore  PARALLEL_PLAN.md  PLAN.md  PhysRevX.5.021028  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: api.md  deployment.md  index.md  models.md
docs/demos/: index.md
examples/: demo.py  model_instance_demo.py  mpr_demo.py  phase_plane_export.html  stochastic_resonance.py  van_der_pol.py
notebooks/: marimo_wilson_cowan.py
scripts/: build_custom_demo.py  generate_demos.py
skills/pypi-publisher/: SKILL.md
skills/pypi-publisher/assets/: sample_pyproject.toml
skills/pypi-publisher/references/: pyproject_toml_template.md  release_checklist.md  trusted_publishing_guide.md
skills/pypi-publisher/scripts/: build_and_check.py  generate_gh_action.py
src/phase_plane_widget/: __init__.py  model_spec.py  models.py  sympy_js.py  widget.py
src/phase_plane_widget/static/: widget.css  widget.js
src/tvb_phaseplane/: __init__.py  model_spec.py  models.py  sympy_js.py  widget.py
src/tvb_phaseplane/static/: widget.css  widget.js
tests/: test_custom_model.py  test_display_mode.py  test_editor.py  test_heun.py  test_heun_runner.js  test_safety.py  test_sweep.py  test_sympy_js.py
