[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phase-plane-widget"
version = "0.1.0"
description = "Interactive phase plane widget for neural mass models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "anywidget>=0.9.0",
    "ipywidgets>=8.0",
    "numpy",
    "scipy",
    "sympy",
    "traitlets",
]

[project.optional-dependencies]
dev = ["jupyterlab", "notebook", "jupytext"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phase_plane_widget"]
